--- a/rarecoal-tools.cabal
+++ b/rarecoal-tools.cabal
@@ -139,4 +139,11 @@ executable concatFreqSum
   build-depends:        base, pipes, transformers, optparse-applicative, rarecoal-tools, errors,
                         managed
   default-language:     Haskell2010
- 
+
+executable filterFreqSum
+  main-is:              Main.hs
+  hs-source-dirs:       src-filterFreqSum, src-mergeFreqSum
+  other-modules:        OrderedZip
+  build-depends:        base, pipes, optparse-applicative, rarecoal-tools, errors, pipes-text, 
+                        turtle, attoparsec, pipes-attoparsec, transformers
+  default-language:     Haskell2010
