--- a/rarecoal-tools.cabal
+++ b/rarecoal-tools.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                rarecoal-tools
-version:             1.1.2
+version:             1.1.3
 license:             GPL-3
 license-file:        LICENSE
 author:              Stephan Schiffels
@@ -11,20 +11,10 @@ category:            Bioinformatics
 build-type:          Simple
 cabal-version:       >=1.10
 
-library
-  exposed-modules:     Rarecoal.Formats.RareAlleleHistogram,
-                       Rarecoal.Formats.FreqSum
-  hs-source-dirs:      src
-  build-depends:       base, containers, errors, text, attoparsec, pipes,
-                       pipes-text, transformers,
-                       pipes-attoparsec, vector, data-memocombinators, split, MissingH, hslogger
-  default-language:    Haskell2010
-  ghc-options:         -O
-
 executable vcf2FreqSum
   main-is:             vcf2FreqSum.hs
   hs-source-dirs:      src-vcf2FreqSum
-  build-depends:       base, rarecoal-tools,
+  build-depends:       base, rarecoal-formats,
                        text,
                        errors,
                        attoparsec,
@@ -38,10 +28,10 @@ executable vcf2FreqSum
 executable groupFreqSum
   main-is:             groupFreqSum.hs
   hs-source-dirs:      src-groupFreqSum
-  build-depends:       base, rarecoal-tools,
+  build-depends:       base, rarecoal-formats,
                        optparse-applicative,
                        pipes-text,
-                       pipes,
+                       pipes, text,
                        pipes-attoparsec,
                        errors,
                        split
@@ -50,7 +40,7 @@ executable groupFreqSum
 executable selectInFreqSum
   main-is:             selectInFreqSum.hs
   hs-source-dirs:      src-selectInFreqSum
-  build-depends:       base, rarecoal-tools,
+  build-depends:       base, rarecoal-formats,
                        optparse-applicative,
                        pipes-text,
                        pipes,
@@ -61,7 +51,7 @@ executable selectInFreqSum
 executable sampleHist
   main-is:             sampleHist.hs
   hs-source-dirs:      src-sampleHist
-  build-depends:       base, rarecoal-tools,
+  build-depends:       base, rarecoal-formats,
                        optparse-applicative,
                        errors,
                        lens,
@@ -77,7 +67,7 @@ executable sampleHist
 executable downSampleFreqSum
   main-is:             downSampleFreqSum.hs
   hs-source-dirs:      src-downSampleFreqSum
-  build-depends:       base, rarecoal-tools,
+  build-depends:       base, rarecoal-formats,
                        optparse-applicative,
                        pipes-text,
                        pipes,
@@ -89,7 +79,7 @@ executable downSampleFreqSum
 executable mergeFreqSum
   main-is:             mergeFreqSum.hs
   hs-source-dirs:      src-mergeFreqSum
-  build-depends:       base, rarecoal-tools,
+  build-depends:       base, rarecoal-formats,
                        optparse-applicative,
                        pipes,
                        transformers,
@@ -102,7 +92,7 @@ executable mergeFreqSum
 executable freqSum2Histogram
   main-is:             freqSum2Histogram.hs
   hs-source-dirs:      src-freqSum2Histogram
-  build-depends:       base, rarecoal-tools,
+  build-depends:       base, rarecoal-formats,
                        containers,
                        optparse-applicative,
                        pipes-text,
@@ -118,14 +108,14 @@ executable freqSum2Histogram
 executable combineHistograms
   main-is:             combineHistograms.hs
   hs-source-dirs:      src-combineHistograms
-  build-depends:       base, rarecoal-tools, errors, text, optparse-applicative, pipes-text, pipes,
+  build-depends:       base, rarecoal-formats, errors, text, optparse-applicative, pipes-text, pipes,
                        pipes-attoparsec, errors, random, containers
   default-language:    Haskell2010
 
 executable ms2hist
   main-is:              ms2hist.hs
   hs-source-dirs:       src-ms2hist
-  build-depends:        base, rarecoal-tools,
+  build-depends:        base, rarecoal-formats,
                         split,
                         containers,
                         optparse-applicative,
@@ -138,13 +128,13 @@ executable ms2hist
 executable concatFreqSum
   main-is:              concatFreqSum.hs
   hs-source-dirs:       src-concatFreqSum
-  build-depends:        base, pipes, transformers, optparse-applicative, rarecoal-tools, errors,
+  build-depends:        base, pipes, transformers, optparse-applicative, rarecoal-formats, errors,
                         managed
   default-language:     Haskell2010
 
 executable filterFreqSum
   main-is:              filterFreqSum.hs
   hs-source-dirs:       src-filterFreqSum, src-mergeFreqSum
-  build-depends:        base, pipes, optparse-applicative, rarecoal-tools, errors, pipes-text,
+  build-depends:        base, pipes, optparse-applicative, rarecoal-formats, errors, pipes-text,
                         turtle, attoparsec, pipes-attoparsec, transformers, text, zlib, bytestring
   default-language:     Haskell2010
