--- a/rarecoal-tools.cabal
+++ b/rarecoal-tools.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                rarecoal-tools
-version:             1.2.2
+version:             1.2.3
 license:             GPL-3
 license-file:        LICENSE
 author:              Stephan Schiffels
@@ -114,19 +114,6 @@ executable combineHistograms
                        pipes-attoparsec, errors, random, containers
   default-language:    Haskell2010
 
-executable ms2hist
-  main-is:              ms2hist.hs
-  hs-source-dirs:       src-ms2hist
-  build-depends:        base, sequence-formats,
-                        split,
-                        containers,
-                        optparse-applicative,
-                        errors,
-                        bytestring,
-                        text
-  default-language:     Haskell2010
-  ghc-options:          -with-rtsopts=-K100m
-
 executable concatFreqSum
   main-is:              concatFreqSum.hs
   hs-source-dirs:       src-concatFreqSum
@@ -138,7 +125,8 @@ executable filterFreqSum
   main-is:              filterFreqSum.hs
   hs-source-dirs:       src-filterFreqSum, src-mergeFreqSum
   build-depends:        base, pipes, optparse-applicative, sequence-formats, errors, pipes-text,
-                        turtle, attoparsec, pipes-attoparsec, transformers, text, zlib, bytestring
+                        turtle, attoparsec, pipes-attoparsec, transformers, text, zlib, bytestring,
+                        pipes-safe
   default-language:     Haskell2010
 
 executable eigenstrat2FreqSum
