--- a/rarecoal-tools.cabal
+++ b/rarecoal-tools.cabal
@@ -88,7 +88,8 @@ executable mergeFreqSum
                        pipes-attoparsec,
                        pipes-text,
                        errors,
-                       turtle
+                       turtle,
+                       text
   other-modules:       OrderedZip
   default-language:    Haskell2010
 
