trying to upgrade to lts-18.1

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,6 +1,8 @@
-resolver: lts-10.5
+resolver: lts-18.1
 packages:
 - .
 extra-deps:
-- git: https://github.com/stschiff/sequence-formats.git
-  commit: a01c7fb3d5c2cfbcb45830e8f05a4331867cbe69
+- MissingH-1.5.0.0
+- pipes-text-1.0.0
+# - git: https://github.com/stschiff/sequence-formats.git
+#   commit: a01c7fb3d5c2cfbcb45830e8f05a4331867cbe69
